--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -23,26 +23,26 @@
           <source
             media="(max-width: 767px)"
             srcset="
-              ../img/img-about/mobil-img-about.jpg    1x,
-              ../img/img-about/mobil-img-about-2x.jpg 2x
+              ./img/img-about/mobil-img-about.jpg    1x,
+              ./img/img-about/mobil-img-about-2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px) and (max-width: 1279px)"
             srcset="
-              ../img/img-about/plan-img-about.jpg    1x,
-              ../img/img-about/plan-img-about-2x.jpg 2x
+              ./img/img-about/plan-img-about.jpg    1x,
+              ./img/img-about/plan-img-about-2x.jpg 2x
             "
           />
           <source
             media="(min-width: 1280px)"
             srcset="
-              ../img/img-about/desk-img-about.jpg    1x,
-              ../img/img-about/desk-img-about-2x.jpg 2x
+              ./img/img-about/desk-img-about.jpg    1x,
+              ./img/img-about/desk-img-about-2x.jpg 2x
             "
           />
           <img
-            src="../img/img-about/desk-img-about.jpg"
+            src="./img/img-about/desk-img-about.jpg"
             alt="Premium Watches"
             class="about-img"
           />
