--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,7 +14,7 @@
           <a class="menu-link" href="#catalog">Catalog</a>
         </li>
         <li class="menu-list-item">
-          <a class="menu-link" href="sale">Sale</a>
+          <a class="menu-link" href="#sale">Sale</a>
         </li>
         <li class="menu-list-item">
           <a class="menu-link" href="#reviews">Reviews</a>
@@ -32,7 +32,7 @@
           target="_blank"
         >
           <svg class="social-list-icon" width="20" height="20">
-            <use href="../img/icons.svg#icon-facebook"></use>
+            <use href="./img/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
@@ -43,7 +43,7 @@
           target="_blank"
         >
           <svg class="social-list-icon" width="20" height="20">
-            <use href="../img/icons.svg#icon-instagram"></use>
+            <use href="./img/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
@@ -54,14 +54,14 @@
           target="_blank"
         >
           <svg class="social-list-icon" width="20" height="20">
-            <use href="../img/icons.svg#icon-Frame-60"></use>
+            <use href="./img/icons.svg#icon-Frame-60"></use>
           </svg>
         </a>
       </li>
     </ul>
     <button class="menu-open-btn" type="button">
       <svg class="menu-open-btn-icon" width="34" height="34">
-        <use href="../img/icons.svg#icon-burger-btn"></use>
+        <use href="./img/icons.svg#icon-burger-btn"></use>
       </svg>
     </button>
   </div>
@@ -71,11 +71,11 @@
 <!----------------------------MOBILE MENU--------------------------------------------->
 <div class="mobile-menu">
   <div class="container mobile-menu-container">
-    <buttton class="mobile-menu-close-btn" type="button">
+    <button class="mobile-menu-close-btn" type="button">
       <svg class="mobile-menu-close-icon" width="34" height="34">
-        <use href="../img/icons.svg#icon-btn-close-modal"></use>
+        <use href="./img/icons.svg#icon-btn-close-modal"></use>
       </svg>
-    </buttton>
+    </button>
 
     <nav class="mobile-page-nav-menu">
       <ul class="mobile-nav-menu">
@@ -89,7 +89,7 @@
           <a class="mobile-nav-link" href="#catalog">Catalog</a>
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link" href="sale">Sale</a>
+          <a class="mobile-nav-link" href="#sale">Sale</a>
         </li>
         <li class="mobile-nav-menu-item">
           <a class="mobile-nav-link" href="#reviews">Reviews</a>
@@ -107,7 +107,7 @@
           target="_blank"
         >
           <svg class="mobile-socialmedia-list-icon" width="36" height="36">
-            <use href="../img/icons.svg#icon-facebook"></use>
+            <use href="./img/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
@@ -118,7 +118,7 @@
           target="_blank"
         >
           <svg class="mobile-socialmedia-list-icon" width="36" height="36">
-            <use href="../img/icons.svg#icon-instagram"></use>
+            <use href="./img/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
@@ -129,7 +129,7 @@
           target="_blank"
         >
           <svg class="mobile-socialmedia-list-icon" width="36" height="36">
-            <use href="../img/icons.svg#icon-youtube"></use>
+            <use href="./img/icons.svg#icon-youtube"></use>
           </svg>
         </a>
       </li>
