--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,100 +1,105 @@
-<section class="container">
-    <div class="wrapper-sale">
-        <h2 class="title name-title">Sale</h2>
-        <div class="container-sale">
-            <div class="container-watch-img">
-                <div class="small-watches-container">
-                    <div class="background-watch">
-                        <img 
-                            class="img-watch"
-                            srcset= "
-                            ../img/sale-front-side-clock.png 1x,
-                            ../img/sale-front-side-clock@2x.png 2x
-                            "
-                            src="../img/sale-front-side-clock.png"
-                            alt="Photo of the front of the watch"
-                            />
-                    </div>
-                    <div class="background-watch">
-                        <img 
-                            class="img-watch"
-                            srcset= "
-                            ../img/sale-front-side-timeline.png 1x,
-                            ../img/sale-front-side-timeline@2x.png 2x
-                            "
-                            src="../img/sale-front-side-timeline.png"
-                            alt="Photo of the front of the watch"
-                            />
-                    </div>
-                    <div class="background-watch">
-                        <img 
-                            class="img-watch"
-                            srcset= "
-                            ../img/sale-aside-clock.png 1x,
-                            ../img/sale-aside-clock@2x.png 2x
-                            "
-                            src="../img/sale-aside-clock.png"
-                            alt="Photo of the front of the watch"
-                            />
-                    </div>
-                    <div class="background-watch">
-                        <img 
-                            class="img-watch"
-                            srcset= "
-                            ../img/sale-back-side-clock.png 1x,
-                            ../img/sale-back-side-clock@2x.png 2x
-                            "
-                            src="../img/sale-back-side-clock.png"
-                            alt="Photo of the front of the watch"
-                            />
-                    </div>
-                </div>
-                <div class="big-watch-container">
-                    <div class="background-watch big-watch">
-                        <img 
-                            class="big-img-watch"
-                            srcset= "
-                            ../img/sale-main-clock.png 1x,
-                            ../img/sale-main-clock@2x.png 2x
-                            "
-                            src="../img/sale-main-clock.png"
-                            alt="Photo of the front of the watch"
-                            />
-                    </div>
-                </div>
-            </div>
-            <div class="blue-wrapper">
-                <h3 class="name-description">MARQ® Commander (Gen 2) - Carbon Edition</h3>
-                <p class="product-tag">Product tag: 706587</p>
-                <div class="tag-price-container">
-                    <span class="wrapper-tag">€1500</span>
-                    <span class="tag-line-through">€1300</span>
-                </div>
-                <p class="main-text">The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for adventurers that takes materials and features to the next level. 
-                    The body of the watch is made of very durable Fused Carbon Fiber material and has a precise AMOLED touch screen. 
-                    The sensitive touch screen is complemented by buttons that can be used in any conditions. 
-                </p>
-                <ul class="container-tags-option">
-                    <li class="option-tag">
-                        <p class="item-text-tag">Fused carbon fiber</p>
-                    </li>
-                    <li class="option-tag">
-                        <p class="item-text-tag">Grade-5 Titanuim</p>
-                    </li>
-                    <li class="option-tag">
-                        <p class="item-text-tag">Athlete</p>
-                    </li>
-                    <li class="option-tag">
-                        <p class="item-text-tag">Golfer</p>
-                    </li>
-                    <li class="option-tag">
-                        <p class="item-text-tag">Commander</p>
-                    </li>
-                    <li class="option-tag">
-                        <p class="item-text-tag">Adventurer</p>
-                    </li>
-                </ul>
-            </div>
+<section class="container" id="sale">
+  <div class="wrapper-sale">
+    <h2 class="title name-title">Sale</h2>
+    <div class="container-sale">
+      <div class="container-watch-img">
+        <div class="small-watches-container">
+          <div class="background-watch">
+            <img
+              class="img-watch"
+              srcset="
+                ./img/sale-front-side-clock.png    1x,
+                ./img/sale-front-side-clock@2x.png 2x
+              "
+              src="./img/sale-front-side-clock.png"
+              alt="Photo of the front of the watch"
+            />
+          </div>
+          <div class="background-watch">
+            <img
+              class="img-watch"
+              srcset="
+                ./img/sale-front-side-timeline.png    1x,
+                ./img/sale-front-side-timeline@2x.png 2x
+              "
+              src="./img/sale-front-side-timeline.png"
+              alt="Photo of the front of the watch"
+            />
+          </div>
+          <div class="background-watch">
+            <img
+              class="img-watch"
+              srcset="
+                ./img/sale-aside-clock.png    1x,
+                ./img/sale-aside-clock@2x.png 2x
+              "
+              src="./img/sale-aside-clock.png"
+              alt="Photo of the front of the watch"
+            />
+          </div>
+          <div class="background-watch">
+            <img
+              class="img-watch"
+              srcset="
+                ./img/sale-back-side-clock.png    1x,
+                ./img/sale-back-side-clock@2x.png 2x
+              "
+              src="./img/sale-back-side-clock.png"
+              alt="Photo of the front of the watch"
+            />
+          </div>
         </div>
+        <div class="big-watch-container">
+          <div class="background-watch big-watch">
+            <img
+              class="big-img-watch"
+              srcset="
+                ./img/sale-main-clock.png    1x,
+                ./img/sale-main-clock@2x.png 2x
+              "
+              src="./img/sale-main-clock.png"
+              alt="Photo of the front of the watch"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="blue-wrapper">
+        <h3 class="name-description">
+          MARQ® Commander (Gen 2) - Carbon Edition
+        </h3>
+        <p class="product-tag">Product tag: 706587</p>
+        <div class="tag-price-container">
+          <span class="wrapper-tag">€1500</span>
+          <span class="tag-line-through">€1300</span>
+        </div>
+        <p class="main-text">
+          The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch
+          for adventurers that takes materials and features to the next level.
+          The body of the watch is made of very durable Fused Carbon Fiber
+          material and has a precise AMOLED touch screen. The sensitive touch
+          screen is complemented by buttons that can be used in any conditions.
+        </p>
+        <ul class="container-tags-option">
+          <li class="option-tag">
+            <p class="item-text-tag">Fused carbon fiber</p>
+          </li>
+          <li class="option-tag">
+            <p class="item-text-tag">Grade-5 Titanuim</p>
+          </li>
+          <li class="option-tag">
+            <p class="item-text-tag">Athlete</p>
+          </li>
+          <li class="option-tag">
+            <p class="item-text-tag">Golfer</p>
+          </li>
+          <li class="option-tag">
+            <p class="item-text-tag">Commander</p>
+          </li>
+          <li class="option-tag">
+            <p class="item-text-tag">Adventurer</p>
+          </li>
+        </ul>
+      </div>
     </div>
+  </div>
 </section>
