--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -46,27 +46,27 @@
         <picture>
           <source
             srcset="
-              ../img/contact-us/contact-us-watch.jpg    1x,
-              ../img/contact-us/contact-us-watch-2x.jpg 2x
+              ./img/contact-us/contact-us-watch.jpg    1x,
+              ./img/contact-us/contact-us-watch-2x.jpg 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ../img/contact-us/contact-us-watch-tab.jpg    1x,
-              ../img/contact-us/contact-us-watch-tab-2x.jpg 2x
+              ./img/contact-us/contact-us-watch-tab.jpg    1x,
+              ./img/contact-us/contact-us-watch-tab-2x.jpg 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              ../img/contact-us/contact-us-watch-mob.jpg    1x,
-              ../img/contact-us/contact-us-watch-mob-2x.jpg 2x
+              ./img/contact-us/contact-us-watch-mob.jpg    1x,
+              ./img/contact-us/contact-us-watch-mob-2x.jpg 2x
             "
             media="(max-width: 767px)"
           />
           <img
-            src="../img/contact-us/contact-us-watch-tab.jpg"
+            src="./img/contact-us/contact-us-watch-tab.jpg"
             alt="watch-picture"
             width="704"
             height="556"
