--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
   <div class="container hero-page">
     <div class="media">
       <ul class="text-blok">
