--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,6 @@
-.hero{
+/* .hero{
   padding-bottom: 60px;
-}
+} */
 
 .back{
   width: 100%;
@@ -22,6 +22,7 @@
   flex-direction: column;
   gap: 20px;
   margin-top: 60px;
+  max-width: 335px;
 }
 .hero-title {
   font-weight: 600;
@@ -78,9 +79,9 @@
     max-width: 768px;
     padding: 0 32px;
   }
-  .hero{
+  /* .hero{
     padding-bottom: 80px;
-  }
+  } */
 
   .hero-page {
     gap: 40px;
@@ -145,9 +146,9 @@
       max-width: 1280px;
       padding: 0 65px;
     }
-    .hero{
+    /* .hero{
       padding-bottom: 100px;
-    }
+    } */
     .text-blok{
       max-width: 597px;
     }
