--- a/src/css/header.css
+++ b/src/css/header.css
@@ -45,7 +45,7 @@ button {
 
 .container {
   max-width: 375px;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   margin: 0 auto;
 }
 
@@ -332,16 +332,21 @@ button {
 
 
   .mobile-menu {
+
       position: fixed;
       top: 0;
       left: 0;
       z-index: 999999999;
-      width: 100%;
+      display: flex;
+      justify-content: center;
+      pointer-events: none;
+      /* width: 100%; */
+      min-width: 330px;
       height: 100%;
-      background-color: rgba(12, 12, 12, 0.92);
+      /* background-color: rgba(12, 12, 12, 0.92);
       background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg.jpg");
       background-position: center;
-      background-repeat: no-repeat;
+      background-repeat: no-repeat; */
       
   
       opacity: 0;
@@ -351,12 +356,15 @@ button {
     }
   
     .mobile-menu.is-open {
+      pointer-events: auto;
       opacity: 1;
       visibility: visible;
     }
   
     .mobile-menu-container {
-      position: relative;
+      /* position: relative; */
+      position: absolute;
+      justify-content: space-between;
       display: flex;
       flex-direction: column;
       /* max-width: 320px;  */
@@ -364,6 +372,11 @@ button {
       height: 100%;
       margin-left: auto;
       margin-right: auto;
+      background-color: rgba(12, 12, 12, 0.92);
+        background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+
     }
 
   
@@ -373,6 +386,7 @@ button {
         top: 26px;
         right: 32px;
         background-color: transparent;
+        
         line-height: 0;
         border: none;
         padding: 0;
@@ -392,7 +406,7 @@ button {
           flex-direction: column;
           align-items: center;
           gap: 32px;
-          /* margin-top: 50px; */
+          margin-top: 50px; 
           /*margin-bottom: 50px; */
       
         }
