--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,4 +1,4 @@
-<section class="container" id="sale">
+<section class="container section-sale" id="sale">
   <div class="wrapper-sale">
     <h2 class="title name-title">Sale</h2>
     <div class="container-sale">
