minnegalieva-footer-end

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -52,12 +52,12 @@
     <div class="footer-menu-address">
       <div class="footer-menu">
         <ul class="footer-menu-list">
-          <li class="footer-menu-item"><a href="">Home</a></li>
-          <li class="footer-menu-item"><a href="">About Us</a></li>
-          <li class="footer-menu-item"><a href="">Catalog</a></li>
-          <li class="footer-menu-item"><a href="">Sale</a></li>
-          <li class="footer-menu-item"><a href="">Reviews</a></li>
-          <li class="footer-menu-item"><a href="">Contact Us</a></li>
+          <li class="footer-menu-item"><a href="./index.html">Home</a></li>
+          <li class="footer-menu-item"><a href="#about-us-section">About Us</a></li>
+          <li class="footer-menu-item"><a href="#catalog">Catalog</a></li>
+          <li class="footer-menu-item"><a href="#sale">Sale</a></li>
+          <li class="footer-menu-item"><a href="#reviews">Reviews</a></li>
+          <li class="footer-menu-item"><a href="#contact-us-section">Contact Us</a></li>
         </ul>
       </div>
       <div class="footer-address">
