--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -62,7 +62,7 @@
   text-transform: uppercase;
   text-align: center;
   color: #fbfbfb;
-  padding: 14px 20px;
+  height: 44px;
   border: 1px solid rgba(251, 251, 251, 0.2);
   border-radius: 16px;
   max-width: 152px;
@@ -85,19 +85,18 @@
 
 .footer-menu-address {
   display: flex;
-  gap: 49px;
+  justify-content: space-between;
   margin-bottom: 24px;
   padding-bottom: 24px;
   border-bottom: solid 1px rgba(251, 251, 251, 0.1);
 }
 
-.footer-menu {
-}
 
 .footer-menu-list {
   display: flex;
-  flex-wrap: wrap;
-  gap: 13px 16px;
+    flex-wrap: wrap;
+    gap: 8px 16px;
+    width: 147px;
 }
 .footer-menu-item {
   font-weight: 500;
@@ -108,7 +107,7 @@
 }
 
 .footer-address {
-  margin-left: auto;
+  width: 83px;
 }
 
 .footer-address-text {
@@ -197,7 +196,6 @@
   }
 
   .footer-menu-address {
-    gap: 62px;
     margin-bottom: 28px;
     padding-bottom: 28px;
   }
@@ -213,6 +211,10 @@
     gap: 19px;
   }
 
+  .footer-address {
+    width: 162px;
+  }
+  
   .footer-address-text {
     font-size: 14px;
     line-height: 1.28;
@@ -220,7 +222,7 @@
 
   .footer-text {
     display: flex;
-    gap: 159px;
+    justify-content: space-between;
   }
 
   .footer-text-item {
@@ -255,9 +257,7 @@
     margin-bottom: 0;
   }
 
-  .footer-menu-address {
-    gap: 0;
-  }
+  
 
   .footer-menu-list {
     gap: 40px;
@@ -265,13 +265,9 @@
   }
 
   .footer-address {
-    margin-left: auto;
     width: 162px;
   }
 
-  .footer-text {
-    gap: 0;
-  }
 
   .footer-link {
     margin-left: auto;
