--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,11 +1,11 @@
-.hero {
+.hero{
   padding-bottom: 60px;
 }
 
-.back {
+.back{
   width: 100%;
   height: 200px;
-  background-color: #0c0c0c;
+  background-color: #0C0C0C;
 }
 .hero-page {
   display: flex;
@@ -17,7 +17,7 @@
   flex-direction: column;
   gap: 28px;
 }
-.text-blok {
+.text-blok{
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -29,14 +29,14 @@
   font-size: 40px;
   line-height: 95%;
   letter-spacing: -0.02em;
-  color: #0c0c0c;
+  color: #0C0C0C;
 }
 .span-hero {
   font-weight: 600;
   font-size: 40px;
   line-height: 95%;
   letter-spacing: -0.02em;
-  color: #3350e9;
+  color: #3350E9;
 }
 .hero-subtitle {
   font-weight: 500;
@@ -46,7 +46,7 @@
   color: rgba(12, 12, 12, 0.7);
 }
 
-.hero-section-team {
+.hero-section-team{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -60,16 +60,15 @@
   letter-spacing: -0.02em;
   text-decoration: underline;
   text-decoration-skip-ink: none;
-  color: #0c0c0c;
+  color: #0C0C0C;
 }
 
 .anchor-btn:hover,
 .anchor-btn:focus {
-  color: #3350e9;
+  color: #3350E9;
+
 }
-/* .hero-image {
-  height: 366px;
-} */
+
 
 /* -----------Tablet---------------*/
 
@@ -78,7 +77,7 @@
     max-width: 768px;
     padding: 0 32px;
   }
-  .hero {
+  .hero{
     padding-bottom: 80px;
   }
 
@@ -87,11 +86,11 @@
   }
   .media {
     flex-direction: row;
-    justify-content: space-between;
+  justify-content: space-between;
     margin-top: 80px;
   }
 
-  .text-blok {
+  .text-blok{
     align-items: start;
     margin-top: 0;
     max-width: 557px;
@@ -115,13 +114,13 @@
     letter-spacing: -0.02em;
     width: 480px;
   }
-
-  .hero-section-team {
+  
+  .hero-section-team{
     flex-direction: column;
     justify-content: space-between;
     align-items: end;
   }
-
+  
   .anchor-btn {
     font-weight: 500;
     font-size: 20px;
@@ -129,38 +128,36 @@
     letter-spacing: -0.02em;
     text-decoration: underline;
     text-decoration-skip-ink: none;
-    color: #0c0c0c;
+    color: #0C0C0C;
   }
 
-  .hero-image {
-    height: 520px;
-  }
 }
 
-/**----------DESKTOP VERSION-------------**/
 
-@media screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-    padding: 0 65px;
-  }
-  .hero {
-    padding-bottom: 100px;
-  }
-  .text-blok {
-    max-width: 597px;
-  }
-  .hero-title {
-    font-size: 72px;
-    line-height: 87%;
-  }
+  /**----------DESKTOP VERSION-------------**/
 
-  .span-hero {
-    font-size: 72px;
-    line-height: 87%;
-  }
+  @media screen and (min-width: 1280px) {
+    .container {
+      max-width: 1280px;
+      padding: 0 65px;
+    }
+    .hero{
+      padding-bottom: 100px;
+    }
+    .text-blok{
+      max-width: 597px;
+    }
+    .hero-title {
+        font-size: 72px;
+        line-height: 87%;
 
-  .hero-image {
-    height: 500px;
+    }
+
+   
+    .span-hero {
+      font-size: 72px;
+      line-height: 87%;
+
+    }
+  
   }
-}
