--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,7 +31,7 @@
               srcset="./img/team-mob-1x.png 1x, ./img/team-mob-2x.png 2x"
               media="(max-width: 767px)"
             />
-            <img src="./img/team-mob-1x.png 1x," alt="Teams" class="images" />
+            <img src="./img/team-mob-1x.png" alt="Teams" class="images" />
           </picture>
         </li>
         <li class="anchor">
@@ -52,7 +52,7 @@
         srcset="./img/hero-mob-1x.png 1x, ./img/hero-mob-2x.png 2x"
         media="(max-width: 767px)"
       />
-      <img src="../img/hero-2x.png," alt="watches" class="images-hero" />
+      <img src="./img/hero-2x.png" alt="watches" class="images" />
     </picture>
   </div>
 </section>
