add alt to img victoria-romashenko-portrait

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -21,6 +21,7 @@
           <img
             class="team-member-photo"
             src="./img/reviews/victoria-romashenko-portrait.png"
+            alt="victoria-romashenko-portrait"
             width="56"
             height="56"
           />
