--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -2,7 +2,7 @@
   <div class="container about">
     <div class="flex-container">
       <div class="content-about">
-        <h3 class="about-title">About Us</h3>
+        <h2 class="about-title">About Us</h2>
         <p class="about-text first-paragraph">
           Welcome to our premium watch collection, where luxury and style meet
           functionality and precision. Our selection of timepieces embodies the
@@ -14,9 +14,7 @@
           just a timekeeping device – it's a statement piece that reflects your
           personality and style. So why settle for anything less than the best?
         </p>
-        <button class="about-button" type="button">
-          <a href="#catalog">View catalog</a>
-        </button>
+        <a class="about-button" href="#catalog">View catalog</a>
       </div>
       <div class="image-about">
         <picture>
