--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,12 @@
           href="https://www.facebook.com/goITclub/"
           target="_blank"
         >
-          <svg class="social-list-icon" width="20" height="20">
+          <svg
+            class="social-list-icon"
+            width="20"
+            height="20"
+            aria-label="facebook icon"
+          >
             <use href="../img/icons.svg#icon-facebook"></use>
           </svg>
         </a>
@@ -42,7 +47,12 @@
           href="https://www.instagram.com/goitclub/"
           target="_blank"
         >
-          <svg class="social-list-icon" width="20" height="20">
+          <svg
+            class="social-list-icon"
+            width="20"
+            height="20"
+            aria-label="instagram icon"
+          >
             <use href="../img/icons.svg#icon-instagram"></use>
           </svg>
         </a>
@@ -53,14 +63,24 @@
           href="https://www.youtube.com/c/GoIT"
           target="_blank"
         >
-          <svg class="social-list-icon" width="20" height="20">
+          <svg
+            class="social-list-icon"
+            width="20"
+            height="20"
+            aria-label="youtube icon"
+          >
             <use href="../img/icons.svg#icon-Frame-60"></use>
           </svg>
         </a>
       </li>
     </ul>
     <button class="menu-open-btn" type="button">
-      <svg class="menu-open-btn-icon" width="34" height="34">
+      <svg
+        class="menu-open-btn-icon"
+        width="34"
+        height="34"
+        aria-label="open mobile menu icon"
+      >
         <use href="../img/icons.svg#icon-burger-btn"></use>
       </svg>
     </button>
@@ -72,7 +92,12 @@
 <div class="mobile-menu">
   <div class="container mobile-menu-container">
     <buttton class="mobile-menu-close-btn" type="button">
-      <svg class="mobile-menu-close-icon" width="34" height="34">
+      <svg
+        class="mobile-menu-close-icon"
+        width="34"
+        height="34"
+        aria-label="icon close mobile menu"
+      >
         <use href="../img/icons.svg#icon-btn-close-modal"></use>
       </svg>
     </buttton>
@@ -106,7 +131,12 @@
           href="https://www.facebook.com/goITclub/"
           target="_blank"
         >
-          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+          <svg
+            class="mobile-socialmedia-list-icon"
+            width="36"
+            height="36"
+            aria-label="icon facebook"
+          >
             <use href="../img/icons.svg#icon-facebook"></use>
           </svg>
         </a>
@@ -117,7 +147,12 @@
           href="https://www.instagram.com/goitclub/"
           target="_blank"
         >
-          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+          <svg
+            class="mobile-socialmedia-list-icon"
+            width="36"
+            height="36"
+            aria-label="icon instagram"
+          >
             <use href="../img/icons.svg#icon-instagram"></use>
           </svg>
         </a>
@@ -128,7 +163,12 @@
           href="https://www.youtube.com/c/GoIT"
           target="_blank"
         >
-          <svg class="mobile-socialmedia-list-icon" width="36" height="36">
+          <svg
+            class="mobile-socialmedia-list-icon"
+            width="36"
+            height="36"
+            aria-label="icon youtube"
+          >
             <use href="../img/icons.svg#icon-youtube"></use>
           </svg>
         </a>
