--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -30,7 +30,6 @@
               name="user-tel"
               placeholder="+380"
               pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$"
-              (+380-XX-XXX-XX-XX)
               required
             />
             <textarea
@@ -39,7 +38,7 @@
               placeholder="Comment"
             ></textarea>
           </div>
-          <button type="submit" class="form-btn">Send</button>
+          <button id="form-send-button" type="submit" class="form-btn">Send</button>
         </form>
       </div>
       <div class="image-container">
