--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -67,14 +67,16 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 1.29;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fbfbfb;
   border: 1px solid rgba(251, 251, 251, 0.15);
   border-radius: 16px;
   width: 160px;
   height: 48px;
   background-color: transparent;
-  padding: 15px 43px 15px 44px;
+  /* padding: 15px 43px 15px 44px; */
 }
 
 @media screen and (max-width: 767px) {
@@ -117,7 +119,7 @@
     margin-bottom: 0;
   }
 
-  .adv-btn {
+  /* .adv-btn {
     width: 162px;
-  }
+  } */
 }
