--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -35,6 +35,10 @@
   font-style: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Gilroy', sans-serif;
   background-color: #fbfbfb;
