--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -51,6 +51,11 @@
   height: 18px;
 }
 
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  fill: #fbfbfb;
+}
+
 .footer-phone {
   margin-bottom: 40px;
 }
@@ -91,12 +96,11 @@
   border-bottom: solid 1px rgba(251, 251, 251, 0.1);
 }
 
-
 .footer-menu-list {
   display: flex;
-    flex-wrap: wrap;
-    gap: 8px 16px;
-    width: 147px;
+  flex-wrap: wrap;
+  gap: 8px 16px;
+  width: 147px;
 }
 .footer-menu-item {
   font-weight: 500;
@@ -214,7 +218,7 @@
   .footer-address {
     width: 162px;
   }
-  
+
   .footer-address-text {
     font-size: 14px;
     line-height: 1.28;
@@ -257,8 +261,6 @@
     margin-bottom: 0;
   }
 
-  
-
   .footer-menu-list {
     gap: 40px;
     width: 505px;
@@ -267,7 +269,6 @@
   .footer-address {
     width: 162px;
   }
-
 
   .footer-link {
     margin-left: auto;
