--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -49,11 +49,13 @@
   opacity: 0.8;
   width: 18px;
   height: 18px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-soc-link:hover,
-.footer-soc-link:focus {
+.footer-soc-link:hover .footer-icon,
+.footer-soc-link:focus .footer-icon {
   fill: #fbfbfb;
+  opacity: 1;
 }
 
 .footer-phone {
