--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -245,7 +245,7 @@
 
 @media (min-width: 1280px) {
   .footer.container {
-    padding: 0 32px;
+    padding: 0 32px 32px 32px;
   }
 
   .footer-section {
