--- a/src/css/header.css
+++ b/src/css/header.css
@@ -66,7 +66,6 @@ button {
 .page-header {
   padding: 26px 0;
   border-bottom: 1px solid rgba(12, 12, 12, 0.1);
- 
 }
 
 .page-header-container {
@@ -169,7 +168,6 @@ button {
   fill: #0c0c0c;
 }
 
-
 .header-social-list-link:hover,
 .header-social-list-link:focus {
   fill: #3350e9;
@@ -202,278 +200,250 @@ button {
 /**********************************MOBILE MENU**************************************/
 
 @media only screen and (max-width: 767px) {
-
-
-
   .mobile-menu {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 999999999;
-      /* width: 100%; */
-      pointer-events: none;
-      min-width: 200px;
-      height: 100%;
-      /* background-color: rgba(12, 12, 12, 0.92);
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 999999999;
+    /* width: 100%; */
+    pointer-events: none;
+    min-width: 200px;
+    height: 100%;
+    /* background-color: rgba(12, 12, 12, 0.92);
       background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/mobile-bg.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover; */
 
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 250ms linear, visibility 250ms linear;
-  
-    }
-  
-    .mobile-menu.is-open {
-      pointer-events: auto;
-      opacity: 1;
-      visibility: visible;
-    }
-  
-    .mobile-menu-container {
-      position: absolute;
-      justify-content: space-between;
-      /* position: relative; */
-      display: flex;
-      flex-direction: column;
-      /* max-width: 320px;  */
-      padding: 20px 20px 40px 20px;
-      height: 100%;
-      margin-left: auto;
-      margin-right: auto;
-
-      background-color: rgba(12, 12, 12, 0.92);
-        background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/mobile-bg.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-  
-  
-    .mobile-menu-close-btn {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background-color: transparent;
-      line-height: 0;
-      border: none;
-      padding: 0;
-      stroke: #ffffff;
-      width: 34px;
-      height: 34px;
-      cursor: pointer;
-    }
-  
-  
-    .mobile-page-nav-menu {
-      margin-top: auto;
-      margin-bottom: auto; 
-      
-    }
-  
-    .mobile-nav-menu {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 24px;
-      /* margin-top: 50px;
-      margin-bottom: 50px; */
-  
-    }
-  
-    .mobile-nav-link {
-      font-family: 'Gilroy', sans-serif;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 1.28571;
-      text-align: center;
-      color: #fbfbfb;
-    }
-  
-    .mobile-socialmedia-list {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      /* padding-bottom: 40px; */
-    }
-  
-    .mobile-socialmedia-list-link {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 10px;
-      fill: #fbfbfb;
-      border: 1px solid rgba(251, 251, 251, 0.1);
-      padding: 8px;
-      width: 34px;
-      height: 34px;
-    }
-
-
-
-}
-
-@media only screen and (min-resolution: 192dpi) and (max-width: 767px){
-  .mobile-menu {
-    background-color: rgba(12, 12, 12, 0.92);
-    background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/mobile-bg@2x.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 250ms linear, visibility 250ms linear;
   }
 
+  .mobile-menu.is-open {
+    pointer-events: auto;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .mobile-menu-container {
+    position: absolute;
+    justify-content: space-between;
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    /* max-width: 320px;  */
+    padding: 20px 20px 40px 20px;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
+    background-color: rgba(12, 12, 12, 0.92);
+    background-image: linear-gradient(
+        rgba(12, 12, 12, 0.92),
+        rgba(12, 12, 12, 0.92)
+      ),
+      url('../img/mobile-menu-bg/mobile-bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .mobile-menu-close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
+    line-height: 0;
+    border: none;
+    padding: 0;
+    stroke: #ffffff;
+    width: 34px;
+    height: 34px;
+    cursor: pointer;
+  }
+
+  .mobile-page-nav-menu {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .mobile-nav-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    /* margin-top: 50px;
+      margin-bottom: 50px; */
+  }
+
+  .mobile-nav-link {
+    font-family: 'Gilroy', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    text-align: center;
+    color: #fbfbfb;
+  }
+
+  .mobile-socialmedia-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    /* padding-bottom: 40px; */
+  }
+
+  .mobile-socialmedia-list-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    fill: #fbfbfb;
+    border: 1px solid rgba(251, 251, 251, 0.1);
+    padding: 8px;
+    width: 34px;
+    height: 34px;
+  }
 }
 
+@media only screen and (min-resolution: 192dpi) and (max-width: 767px) {
+  .mobile-menu {
+    background-color: rgba(12, 12, 12, 0.92);
+    background-image: linear-gradient(
+        rgba(12, 12, 12, 0.92),
+        rgba(12, 12, 12, 0.92)
+      ),
+      url('../img/mobile-menu-bg/mobile-bg@2x.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+}
 
 @media (min-width: 768px) and (max-width: 1279px) {
-
-
   .mobile-menu {
-
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 999999999;
-      display: flex;
-      justify-content: center;
-      pointer-events: none;
-      /* width: 100%; */
-      min-width: 330px;
-      height: 100%;
-      /* background-color: rgba(12, 12, 12, 0.92);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999999;
+    display: flex;
+    justify-content: center;
+    pointer-events: none;
+    /* width: 100%; */
+    min-width: 330px;
+    height: 100%;
+    /* background-color: rgba(12, 12, 12, 0.92);
       background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg.jpg");
       background-position: center;
       background-repeat: no-repeat; */
-      
-  
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 250ms linear, visibility 250ms linear;
-  
-    }
-  
-    .mobile-menu.is-open {
-      pointer-events: auto;
-      opacity: 1;
-      visibility: visible;
-    }
-  
-    .mobile-menu-container {
-      /* position: relative; */
-      position: absolute;
-      justify-content: space-between;
-      display: flex;
-      flex-direction: column;
-      /* max-width: 320px;  */
-      padding: 20px 20px 40px 20px;
-      height: 100%;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: rgba(12, 12, 12, 0.92);
-        background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
 
-    }
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 250ms linear, visibility 250ms linear;
+  }
 
-  
+  .mobile-menu.is-open {
+    pointer-events: auto;
+    opacity: 1;
+    visibility: visible;
+  }
 
-    .mobile-menu-close-btn {
-        position: absolute;
-        top: 26px;
-        right: 32px;
-        background-color: transparent;
-        
-        line-height: 0;
-        border: none;
-        padding: 0;
-        stroke: #ffffff;
-        width: 40px;
-        height: 40px;
-        cursor: pointer;
-      }
+  .mobile-menu-container {
+    /* position: relative; */
+    position: absolute;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    /* max-width: 320px;  */
+    padding: 20px 20px 40px 20px;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(12, 12, 12, 0.92);
+    background-image: linear-gradient(
+        rgba(12, 12, 12, 0.92),
+        rgba(12, 12, 12, 0.92)
+      ),
+      url('../img/mobile-menu-bg/tablet-bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 
-       .mobile-page-nav-menu {
-          margin-top: auto;
-          margin-bottom: auto;
-        }
-      
-        .mobile-nav-menu {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          gap: 32px;
-          margin-top: 50px; 
-          /*margin-bottom: 50px; */
-      
-        }
+  .mobile-menu-close-btn {
+    position: absolute;
+    top: 26px;
+    right: 32px;
+    background-color: transparent;
 
-                .mobile-nav-link {
-                  font-family: 'Gilroy', sans-serif;
-                  font-weight: 500;
-                  font-size: 14px;
-                  line-height: 1.28571;
-                  text-align: center;
-                  color: #fbfbfb;
-                }
-        
-                .mobile-socialmedia-list {
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  gap: 10px;
-                  padding-bottom: 40px;
-                }
-        
-                .mobile-socialmedia-list-link {
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  border-radius: 10px;
-                  fill: #fbfbfb;
-                  border: 1px solid rgba(251, 251, 251, 0.1);
-                  padding: 8px;
-                  width: 34px;
-                  height: 34px;
-                }
+    line-height: 0;
+    border: none;
+    padding: 0;
+    stroke: #ffffff;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+  }
 
+  .mobile-page-nav-menu {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 
+  .mobile-nav-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    margin-top: 50px;
+    /*margin-bottom: 50px; */
+  }
 
+  .mobile-nav-link {
+    font-family: 'Gilroy', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    text-align: center;
+    color: #fbfbfb;
+  }
 
+  .mobile-socialmedia-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 40px;
+  }
 
-
-
-  
-  
+  .mobile-socialmedia-list-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    fill: #fbfbfb;
+    border: 1px solid rgba(251, 251, 251, 0.1);
+    padding: 8px;
+    width: 34px;
+    height: 34px;
+  }
 }
 
 @media only screen and (min-resolution: 192dpi) and (max-width: 1279px) {
-
-  
-    .mobile-menu {
-
-        background-color: rgba(12, 12, 12, 0.92);
-        background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg@2x.jpg");
-        background-position: center; 
-        background-repeat: no-repeat;
-        background-size: cover;
-        
-
-      }
-  
+  .mobile-menu {
+    background-color: rgba(12, 12, 12, 0.92);
+    background-image: linear-gradient(
+        rgba(12, 12, 12, 0.92),
+        rgba(12, 12, 12, 0.92)
+      ),
+      url('../img/mobile-menu-bg/tablet-bg@2x.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
-  .mobile-menu{
-      display: none;
-
+  .mobile-menu {
+    display: none;
   }
- 
-  
 }
-
-
-
