--- a/src/css/header.css
+++ b/src/css/header.css
@@ -203,7 +203,7 @@ button {
   .mobile-menu {
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
     z-index: 999999999;
     /* width: 100%; */
     pointer-events: none;
