--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -1,5 +1,6 @@
 .section-advertisement {
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .advertisement-wrap {
@@ -88,7 +89,8 @@
 
 @media screen and (min-width: 768px) {
   .section-advertisement {
-    padding-bottom: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
 
   .advertisement-wrap {
@@ -106,7 +108,8 @@
 
 @media screen and (min-width: 1280px) {
   .section-advertisement {
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   .advertisement-wrap {
