--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -1,6 +1,6 @@
 .container.contact-us {
-  /* padding-top: 30px; */
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .contact-us-title {
   font-weight: 600;
@@ -86,8 +86,8 @@
 }
 @media screen and (min-width: 768px) {
   .container.contact-us {
-    /* padding-top: 40px; */
-    padding-bottom: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
   .contact-us-title {
     font-size: 48px;
@@ -127,8 +127,8 @@
 }
 @media screen and (min-width: 1280px) {
   .container.contact-us {
-    /* padding-top: 50px; */
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
   .contact-us-flex-container {
     flex-direction: row;
