--- a/src/css/header.css
+++ b/src/css/header.css
@@ -90,91 +90,8 @@ button {
   color: #0c0c0c;
 }
 
-@media screen and (min-width: 768px) {
-  .header-logo {
-    font-size: 20px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .header-logo {
-    margin-right: 203px;
-  }
-}
-
 .menu-list {
   display: none;
-}
-
-@media screen and (min-width: 1280px) {
-  .menu-list {
-    display: flex;
-
-    gap: 40px;
-  }
-
-  .menu-open-btn {
-    display: none;
-  }
-}
-
-.current {
-  position: relative;
-  
-}
-
-.current::after {
-  content: '';
-  position: absolute;
-  display: flex;
-  text-align: center;
-  
-  /* left: 15px; */
-  bottom: -15px;
-  left: 40%;
-
-  background-color: #3350e9;
-  
-  visibility: hidden;
-  width: 9px;
-  height: 9px;
-  border-radius: 100%;
-}
-
-
-
-
-.menu-link {
-  font-family: 'Gilroy', sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.28571;
-  text-align: center;
-  color: #0c0c0c;
-}
-
-.menu-link:hover,
-.menu-link:focus {
-  color: #3350e9;
-  
-}
-
-.current:hover::after,
-.current:focus::after {
-  visibility: visible;
-}
-
-
-
-
-.header-social-list {
-  display: none;
-}
-
-@media screen and (min-width: 1280px) {
-  .header-social-list {
-    display: flex;
-  }
 }
 
 .header-social-list {
@@ -199,6 +116,76 @@ button {
 .header-social-list-link:focus {
   fill: #3350e9;
   border-color: rgba(51, 80, 233, 0.1);
+}
+
+.current {
+  position: relative;
+}
+
+.current::after {
+  content: '';
+  position: absolute;
+  display: flex;
+  text-align: center;
+
+  /* left: 15px; */
+  bottom: -15px;
+  left: 40%;
+
+  background-color: #3350e9;
+
+  visibility: hidden;
+  width: 9px;
+  height: 9px;
+  border-radius: 100%;
+}
+
+.menu-link {
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28571;
+  text-align: center;
+  color: #0c0c0c;
+}
+
+.menu-link:hover,
+.menu-link:focus {
+  color: #3350e9;
+}
+
+.current:hover::after,
+.current:focus::after {
+  visibility: visible;
+}
+
+.header-social-list {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-logo {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header-logo {
+    margin-right: 203px;
+  }
+
+  .menu-list {
+    display: flex;
+
+    gap: 40px;
+  }
+
+  .menu-open-btn {
+    display: none;
+  }
+  .header-social-list {
+    display: flex;
+  }
 }
 
 /********************** Burger button **********/
@@ -228,126 +215,120 @@ button {
 
 @media only screen and (max-width: 767px) {
   .mobile-menu {
-      position: fixed;
-      top: 0;
-      right: 0;
-      /* left: 0; */
-      z-index: 999999999;
-      /* width: 100%; */
-      pointer-events: none;
-      min-width: 200px;
-      height: 100%;
-      /* background-color: rgba(12, 12, 12, 0.92);
+    position: fixed;
+    top: 0;
+    right: 0;
+    /* left: 0; */
+    z-index: 999999999;
+    /* width: 100%; */
+    pointer-events: none;
+    min-width: 200px;
+    height: 100%;
+    /* background-color: rgba(12, 12, 12, 0.92);
       background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/mobile-bg.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover; */
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 250ms linear, visibility 250ms linear;
-  
-    }
-  
-    .mobile-menu.is-open {
-      pointer-events: auto;
-      opacity: 1;
-      visibility: visible;
-    }
-  
-    .mobile-menu-container {
-      position: absolute;
-      justify-content: space-between;
-      /* position: relative; */
-      display: flex;
-      flex-direction: column;
-      /* max-width: 320px;  */
-      padding: 20px 20px 40px 20px;
-      height: 100%;
-      margin-left: auto;
-      margin-right: auto;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 250ms linear, visibility 250ms linear;
+  }
 
-      background-color: rgba(12, 12, 12, 0.92);
-        background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/mobile-bg.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-  
-  
-    .mobile-menu-close-btn {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background-color: transparent;
-      line-height: 0;
-      border: none;
-      padding: 0;
-      stroke: #ffffff;
-      width: 34px;
-      height: 34px;
-      cursor: pointer;
-    }
-  
-  
-    .mobile-page-nav-menu {
-      margin-top: auto;
-      margin-bottom: auto; 
-      
-    }
-  
-    .mobile-nav-menu {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 24px;
-      /* margin-top: 50px;
+  .mobile-menu.is-open {
+    pointer-events: auto;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .mobile-menu-container {
+    position: absolute;
+    justify-content: space-between;
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    /* max-width: 320px;  */
+    padding: 20px 20px 40px 20px;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
+    background-color: rgba(12, 12, 12, 0.92);
+    background-image: linear-gradient(
+        rgba(12, 12, 12, 0.92),
+        rgba(12, 12, 12, 0.92)
+      ),
+      url('../img/mobile-menu-bg/mobile-bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .mobile-menu-close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
+    line-height: 0;
+    border: none;
+    padding: 0;
+    stroke: #ffffff;
+    width: 34px;
+    height: 34px;
+    cursor: pointer;
+  }
+
+  .mobile-page-nav-menu {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .mobile-nav-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    /* margin-top: 50px;
       margin-bottom: 50px; */
-  
-    }
-  
-    .mobile-nav-link {
-      font-family: 'Gilroy', sans-serif;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 1.28571;
-      text-align: center;
-      color: #fbfbfb;
-    }
-  
-    .mobile-socialmedia-list {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      /* padding-bottom: 40px; */
-    }
-  
-    .mobile-socialmedia-list-link {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 10px;
-      fill: #fbfbfb;
-      opacity: 0.8;
-      border: 1px solid rgba(251, 251, 251, 0.1);
-      padding: 8px;
-      width: 34px;
-      height: 34px;
-    }
+  }
 
-        .mobile-socialmedia-list-link:hover,
-        .mobile-socialmedia-list-link:focus {
-          fill: #fbfbfb;
-          opacity: 1;
-        }
+  .mobile-nav-link {
+    font-family: 'Gilroy', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    text-align: center;
+    color: #fbfbfb;
+  }
 
+  .mobile-socialmedia-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    /* padding-bottom: 40px; */
+  }
 
+  .mobile-socialmedia-list-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    fill: #fbfbfb;
+    opacity: 0.8;
+    border: 1px solid rgba(251, 251, 251, 0.1);
+    padding: 8px;
+    width: 34px;
+    height: 34px;
+  }
 
-
-
+  .mobile-socialmedia-list-link:hover,
+  .mobile-socialmedia-list-link:focus {
+    fill: #fbfbfb;
+    opacity: 1;
+  }
 }
 
-@media only screen and (min-resolution: 192dpi) and (max-width: 767px){
+@media only screen and (max-width: 767px) {
   .mobile-menu {
     background-color: rgba(12, 12, 12, 0.92);
     background-image: linear-gradient(
@@ -430,135 +411,119 @@ button {
     background-repeat: no-repeat;
   }
 }
-      position: fixed;
-      top: 0;
-      right: 0;
-      /* left: 0; */
-      z-index: 999999999;
-      display: flex;
-      justify-content: center;
-      pointer-events: none;
-      /* width: 100%; */
-      min-width: 330px;
-      height: 100%;
-      /* background-color: rgba(12, 12, 12, 0.92);
+@media (min-wisth: 768px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    /* left: 0; */
+    z-index: 999999999;
+    display: flex;
+    justify-content: center;
+    pointer-events: none;
+    /* width: 100%; */
+    min-width: 330px;
+    height: 100%;
+    /* background-color: rgba(12, 12, 12, 0.92);
       background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg.jpg");
       background-position: center;
       background-repeat: no-repeat; */
-      
-  
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 250ms linear, visibility 250ms linear;
-  
-    }
-  
-    .mobile-menu.is-open {
-      pointer-events: auto;
-      opacity: 1;
-      visibility: visible;
-    }
-  
-    .mobile-menu-container {
-      /* position: relative; */
-      position: absolute;
-      justify-content: space-between;
-      display: flex;
-      flex-direction: column;
-      /* max-width: 320px;  */
-      padding: 20px 20px 40px 20px;
-      height: 100%;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: rgba(12, 12, 12, 0.92);
-        background-image: linear-gradient(rgba(12, 12, 12, 0.92), rgba(12, 12, 12, 0.92)), url("../img/mobile-menu-bg/tablet-bg.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-
-    }
-
-    .mobile-menu-close-btn {
-        position: absolute;
-        top: 26px;
-        right: 32px;
-        background-color: transparent;
-        
-        line-height: 0;
-        border: none;
-        padding: 0;
-        stroke: #ffffff;
-        width: 40px;
-        height: 40px;
-        cursor: pointer;
-      }
-
-       .mobile-page-nav-menu {
-          margin-top: auto;
-          margin-bottom: auto;
-        }
-      
-        .mobile-nav-menu {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          gap: 32px;
-          margin-top: 50px; 
-          /*margin-bottom: 50px; */
-      
-        }
-
-                .mobile-nav-link {
-                  font-family: 'Gilroy', sans-serif;
-                  font-weight: 500;
-                  font-size: 14px;
-                  line-height: 1.28571;
-                  text-align: center;
-                  color: #fbfbfb;
-                }
-        
-                .mobile-socialmedia-list {
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  gap: 10px;
-                  padding-bottom: 40px;
-                }
-        
-                .mobile-socialmedia-list-link {
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  border-radius: 10px;
-                  fill: #fbfbfb;
-                  opacity: 0.8;
-                  border: 1px solid rgba(251, 251, 251, 0.1);
-                  padding: 8px;
-                  width: 34px;
-                  height: 34px;
-                }
-
-                .mobile-socialmedia-list-link:hover,
-                .mobile-socialmedia-list-link:focus {
-                  fill: #fbfbfb;
-                    opacity: 1;
-
-
-                }
-
-
-
-
-
-
-
-  
-  
-}
-
 
     opacity: 0;
     visibility: hidden;
     transition: opacity 250ms linear, visibility 250ms linear;
+  }
+
+  .mobile-menu.is-open {
+    pointer-events: auto;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .mobile-menu-container {
+    /* position: relative; */
+    position: absolute;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    /* max-width: 320px;  */
+    padding: 20px 20px 40px 20px;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(12, 12, 12, 0.92);
+    background-image: linear-gradient(
+        rgba(12, 12, 12, 0.92),
+        rgba(12, 12, 12, 0.92)
+      ),
+      url('../img/mobile-menu-bg/tablet-bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .mobile-menu-close-btn {
+    position: absolute;
+    top: 26px;
+    right: 32px;
+    background-color: transparent;
+
+    line-height: 0;
+    border: none;
+    padding: 0;
+    stroke: #ffffff;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+  }
+
+  .mobile-page-nav-menu {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .mobile-nav-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    margin-top: 50px;
+    /*margin-bottom: 50px; */
+  }
+
+  .mobile-nav-link {
+    font-family: 'Gilroy', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    text-align: center;
+    color: #fbfbfb;
+  }
+
+  .mobile-socialmedia-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 40px;
+  }
+
+  .mobile-socialmedia-list-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    fill: #fbfbfb;
+    opacity: 0.8;
+    border: 1px solid rgba(251, 251, 251, 0.1);
+    padding: 8px;
+    width: 34px;
+    height: 34px;
+  }
+
+  .mobile-socialmedia-list-link:hover,
+  .mobile-socialmedia-list-link:focus {
+    fill: #fbfbfb;
+    opacity: 1;
   }
 
   .mobile-menu.is-open {
