--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -8,7 +8,8 @@
 }
 
 .section-reviews {
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .reviews-content {
@@ -95,7 +96,8 @@
   }
 
   .section-reviews {
-    padding-bottom: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
 
   .reviews-content {
@@ -143,7 +145,8 @@
 
 @media screen and (min-width: 1280px) {
   .section-reviews {
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
   .reviews-content {
   }
