--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -1,5 +1,6 @@
 .container.section-sale {
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .container-sale {
@@ -144,7 +145,8 @@
 
 @media screen and (min-width: 768px) {
   .container.section-sale {
-    padding-bottom: 80px;
+    padding-bottom: 40px;
+    padding-top: 40px;
   }
 
   .container-watch-img {
@@ -205,7 +207,8 @@
 
 @media screen and (min-width: 1280px) {
   .container.section-sale {
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   .container-sale {
