add mob-menu script

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,9 +14,7 @@
           <a class="menu-link current" href="#catalog">Catalog</a>
         </li>
         <li class="menu-list-item">
-
           <a class="menu-link current" href="#sale">Sale</a>
-
         </li>
         <li class="menu-list-item">
           <a class="menu-link current" href="#reviews">Reviews</a>
@@ -33,7 +31,6 @@
           href="https://www.facebook.com/goITclub/"
           target="_blank"
         >
-
           <svg
             class="social-list-icon"
             width="20"
@@ -41,8 +38,7 @@
             aria-label="facebook icon"
           >
             <use href="./img/icons.svg#icon-facebook"></use>
-
-         </svg>
+          </svg>
         </a>
       </li>
       <li class="header-social-list-item">
@@ -51,7 +47,6 @@
           href="https://www.instagram.com/goitclub/"
           target="_blank"
         >
-
           <svg
             class="social-list-icon"
             width="20"
@@ -68,7 +63,6 @@
           href="https://www.youtube.com/c/GoIT"
           target="_blank"
         >
-
           <svg
             class="social-list-icon"
             width="20"
@@ -76,13 +70,11 @@
             aria-label="youtube icon"
           >
             <use href="./img/icons.svg#icon-Frame-60"></use>
-
           </svg>
         </a>
       </li>
     </ul>
-    <button class="menu-open-btn" type="button">
-
+    <button class="menu-open-btn js-open-menu" type="button">
       <svg
         class="menu-open-btn-icon"
         width="34"
@@ -90,7 +82,6 @@
         aria-label="open mobile menu icon"
       >
         <use href="./img/icons.svg#icon-burger-btn"></use>
-
       </svg>
     </button>
   </div>
@@ -98,10 +89,9 @@
 <!----------------------------THE END HEADER------------------------------------------------->
 
 <!----------------------------MOBILE MENU--------------------------------------------->
-<div class="mobile-menu">
+<div class="mobile-menu js-menu-container">
   <div class="container mobile-menu-container">
-
-    <button class="mobile-menu-close-btn" type="button">
+    <button class="mobile-menu-close-btn js-close-menu" type="button">
       <svg
         class="mobile-menu-close-icon"
         width="34"
@@ -109,33 +99,44 @@
         aria-label="icon close mobile menu"
       >
         <use href="./img/icons.svg#icon-btn-close-modal"></use>
-
       </svg>
     </button>
 
     <nav class="mobile-page-nav-menu">
       <ul class="mobile-nav-menu">
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link current" href="./index.html">Home</a>
+          <a
+            class="mobile-nav-link current mobile-modal-link"
+            href="./index.html"
+            >Home</a
+          >
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link current" href="#about-us-section"
+          <a
+            class="mobile-nav-link current mobile-modal-link"
+            href="#about-us-section"
             >About Us</a
           >
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link current" href="#catalog">Catalog</a>
+          <a class="mobile-nav-link current mobile-modal-link" href="#catalog"
+            >Catalog</a
+          >
         </li>
         <li class="mobile-nav-menu-item">
-
-          <a class="mobile-nav-link current" href="#sale">Sale</a>
-
+          <a class="mobile-nav-link current mobile-modal-link" href="#sale"
+            >Sale</a
+          >
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link current" href="#reviews">Reviews</a>
+          <a class="mobile-nav-link current mobile-modal-link" href="#reviews"
+            >Reviews</a
+          >
         </li>
         <li class="mobile-nav-menu-item">
-          <a class="mobile-nav-link current" href="#contact-us-section"
+          <a
+            class="mobile-nav-link current mobile-modal-link"
+            href="#contact-us-section"
             >Contact Us</a
           >
         </li>
@@ -148,7 +149,6 @@
           href="https://www.facebook.com/goITclub/"
           target="_blank"
         >
-
           <svg
             class="mobile-socialmedia-list-icon"
             width="36"
@@ -156,7 +156,6 @@
             aria-label="icon facebook"
           >
             <use href="./img/icons.svg#icon-facebook"></use>
-
           </svg>
         </a>
       </li>
@@ -166,7 +165,6 @@
           href="https://www.instagram.com/goitclub/"
           target="_blank"
         >
-
           <svg
             class="mobile-socialmedia-list-icon"
             width="36"
@@ -174,7 +172,6 @@
             aria-label="icon instagram"
           >
             <use href="./img/icons.svg#icon-instagram"></use>
-
           </svg>
         </a>
       </li>
@@ -184,7 +181,6 @@
           href="https://www.youtube.com/c/GoIT"
           target="_blank"
         >
-
           <svg
             class="mobile-socialmedia-list-icon"
             width="36"
@@ -192,7 +188,6 @@
             aria-label="icon youtube"
           >
             <use href="./img/icons.svg#icon-youtube"></use>
-
           </svg>
         </a>
       </li>
